<resources>
    <string name="app_name">OrderFood</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="new_">New</string>
    <string name="hot">Hot</string>
    <string name="nairobi">Nairobi</string>
    <string name="search">Search</string>
    <string name="view">View</string>
    <string name="new_orders">New Orders</string>
    <string name="add">Add</string>
    <string name="enter">Enter</string>
    <string name="buy">Buy</string>
    <string name="free_delivery_within_30_min">Free delivery within 30 min</string>
    <string name="related_foods">Related Foods</string>
    <string name="select">Select</string>
    <string name="address">Address</string>
    <string name="delivery">Delivery</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="confirm_delivery">Confirm Delivery</string>
    <string name="juice_with_real_pulp">Juice with real pulp</string>
    <string name="pure_mango_juice">Pure Mango Juice</string>
    <string name="juice_number">Juice</string>
    <string name="booking">Booking</string>
    <string name="confirmation">Confirmation</string>
    <string name="payment">Payment</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="pay">Pay</string>
    <string name="_548_ongata_rongai">548 Ongata Rongai</string>
    <string name="_256_moi_avenue">256 Moi Avenue</string>
    <string name="choose_your_payment_method">Choose your payment method</string>
    <string name="android_pay">Andrid Pay</string>
    <string name="use_google_id">Use Google ID</string>
    <string name="credit_debit_card">Credit/Debit card</string>
    <string name="credit_card">Credit Card</string>
    <string name="confirm">Confirm</string>
    <string name="holders_name">Holder\'s name</string>
    <string name="expiry">Expiry</string>
    <string name="ccv">CCV</string>
    <string name="card_number">Card number</string>
    <string name="_10_00">$10.00</string>
    <string name="done">Done</string>
    <string name="your_order_has_been_placed_succeesfuly">Your order has been placed successfully.</string>
</resources>
